--- a/roles/vpc/vars/main.yml
+++ b/roles/vpc/vars/main.yml
@@ -10,8 +10,8 @@ vpc_dns_zone: ansibled
 
 # credentials for AWS (no, they aren't real...)
 aws_region: ap-southeast-2
-aws_access_key: 'AKIAILRAXK35KYPC55OQ'
-aws_secret_key: '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'
+aws_access_key:
+aws_secret_key:
 # IP CIDR block for the VPC
 vpc_cidr_block: 10.0.0.0/16
 
